@@ -135,7 +135,6 @@
         <findbugs.annotations.version>3.0.1u2</findbugs.annotations.version>
         <hamcrest.version>1.3</hamcrest.version>
         <http.components.version>4.3.6</http.components.version>
-        <jmh.version>1.34</jmh.version>
         <jsr107.tck.version>1.1.1</jsr107.tck.version>
         <junit.version>4.13.2</junit.version>
         <mockito.version>3.6.0</mockito.version>
@@ -1241,6 +1240,7 @@
                 <!--
                 Allow access to Operating system metrics:
                    open jdk.management/com.sun.management.internal
+                   export jdk.management/com.ibm.lang.management.internal
 
                 Avoid warnings caused by reflection in
                 SelectorOptimizer:
@@ -1260,6 +1260,7 @@
                     --add-opens java.base/java.lang=${hazelcast.module.name}
                     --add-opens java.management/sun.management=${hazelcast.module.name}
                     --add-exports java.xml/jdk.xml.internal=${hazelcast.module.name}
+                    --add-exports jdk.management/com.ibm.lang.management.internal=${hazelcast.module.name}
                     --illegal-access=deny
                 </javaModuleArgs>
             </properties>
@@ -1885,18 +1886,6 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-core</artifactId>
-            <version>${jmh.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-generator-annprocess</artifactId>
-            <version>${jmh.version}</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
